--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     />
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
 
     </div>
     <div class="jumbotron">
-        <h1>The Truth Is Out There</h1>
+        <h1 class="display-4">The Truth is Out There</h1>
     </div>
     <div class="container-fluid">
         <div class="row">
@@ -40,9 +40,31 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form>
+                <form class="bg-dark">
                     <p>Filter Search</p>
-                  </form>
+                    <ul class="list-group bg-dark">
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Enter Date</label>
+                            <input type="text" placeholder="1/10/2010" id="datetime" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="city">Enter a City</label>
+                            <input type="text" placeholder="roswell" id="cityID" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="state">Enter a State (Abbreviation)</label>
+                            <input type="text" placeholder="ca" id="stateID" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="country">Enter a Country (Abbreviation)</label>
+                            <input type="text" placeholder="us" id="countryID" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="shape">Enter a Shape</label>
+                            <input type="text" placeholder="cirlce" id="shapeID" />
+                        </li>
+                    </ul>
+                </form>
             </div>
             <div class="col-md-9">
                 <table class="table table-striped">
@@ -60,18 +82,10 @@
                   <tbody></tbody>
                 </table>
             </div>
-            <div class="col-md-9">
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
-                    </li>
-                    <li class="list-group-item">
-                        <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>                   
-                    </li>
-                </ul>
-            </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>   
 </body>
 </html>
